Rename kappotai to kappotaiw and add kappotaib

--- a/kappotaiw.yaml
+++ b/kappotaiw.yaml
@@ -1,9 +1,9 @@
 nameStrings:
   psName:
-    en: Kappotai-Regular
+    en: KappotaiWhite-Regular
   familyName:
-    en: Kappotai
-    ja: 割方体
+    en: KappotaiWhite
+    ja: 割方体白
   styleName:
     en: Regular
     ja: 標準
