--- a/kappotaib.yaml
+++ b/kappotaib.yaml
@@ -7,3 +7,17 @@ nameStrings:
   styleName:
     en: Regular
     ja: 標準
+  uniqueFontIdentifier:
+    en: 0.001;;KappotaiBlack
+  fullName:
+    en: KappotaiBlack Regular
+    ja: 割方体黒 標準
+  version:
+    en: "0.001"
+    ja: "0.001"
+  typographicFamily:
+    en: KappotaiBlack
+    ja: 割方体黒
+  typographicSubfamily:
+    en: Regular
+    ja: 標準
