--- a/kappotaib.yaml
+++ b/kappotaib.yaml
@@ -8,13 +8,13 @@ nameStrings:
     en: Regular
     ja: 標準
   uniqueFontIdentifier:
-    en: 0.001;;KappotaiBlack
+    en: 0.500;;KappotaiBlack
   fullName:
     en: KappotaiBlack Regular
     ja: 割方体黒 標準
   version:
-    en: "0.001"
-    ja: "0.001"
+    en: Version 0.500
+    ja: Version 0.500
   typographicFamily:
     en: KappotaiBlack
     ja: 割方体黒
