Remove redundant information from intermediate files

--- a/kappotaib.yaml
+++ b/kappotaib.yaml
@@ -1,35 +1,1 @@
-nameStrings:
-  psName:
-    en: KappotaiBlack-Regular
-  familyName:
-    en: KappotaiBlack
-    ja: 割方体黒
-  styleName:
-    en: Regular
-    ja: 標準
-  uniqueFontIdentifier:
-    en: 0.500;;KappotaiBlack
-  fullName:
-    en: KappotaiBlack Regular
-    ja: 割方体黒 標準
-  version:
-    en: Version 0.500
-    ja: Version 0.500
-  typographicFamily:
-    en: KappotaiBlack
-    ja: 割方体黒
-  typographicSubfamily:
-    en: Regular
-    ja: 標準
-fontRevision: 0.500
-panose:
-  bFamilyType: 4
-  bSerifStyle: 0
-  bWeight: 9
-  bProportion: 0
-  bContrast: 2
-  bStrokeVariation: 11
-  bArmStyle: 2
-  bLetterForm: 2
-  bMidline: 0
-  bXHeight: 0
+psName: KappotaiBlack-Regular
