--- a/kappotaiw.yaml
+++ b/kappotaiw.yaml
@@ -1,35 +1,1 @@
-nameStrings:
-  psName:
-    en: KappotaiWhite-Regular
-  familyName:
-    en: KappotaiWhite
-    ja: 割方体白
-  styleName:
-    en: Regular
-    ja: 標準
-  uniqueFontIdentifier:
-    en: 0.500;;KappotaiWhite
-  fullName:
-    en: KappotaiWhite Regular
-    ja: 割方体白 標準
-  version:
-    en: Version 0.500
-    ja: Version 0.500
-  typographicFamily:
-    en: KappotaiWhite
-    ja: 割方体白
-  typographicSubfamily:
-    en: Regular
-    ja: 標準
-fontRevision: 0.500
-panose:
-  bFamilyType: 4
-  bSerifStyle: 10
-  bWeight: 2
-  bProportion: 0
-  bContrast: 2
-  bStrokeVariation: 11
-  bArmStyle: 3
-  bLetterForm: 8
-  bMidline: 11
-  bXHeight: 0
+psName: KappotaiWhite-Regular
